3/10 カテゴリタブの実装と、タスク追加時にカテゴリ未選択の場合、カテゴリを「なし」として登録する仕様を作成。（バクなし）

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/TaskDB?serverTimezone=Asia/Tok
 spring.datasource.username=root
 spring.datasource.password=Naonao7010
 spring.datasource.sql-script-encoding=UTF-8
-spring.datasource.initialization-mode=always
+spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization=true
 spring.datasource.initialization-order=after-jpa
 spring.mvc.hiddenmethod.filter.enabled=true
+
+
