--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #for MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/TaskDB?serverTimezone=Asia/Tokyo&&createDatabaseIfNotExist=true
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://task-manager-database.ctiou080aim2.ap-northeast-1.rds.amazonaws.com:3306/task_manager?serverTimezone=JST
+spring.datasource.username=admin
 spring.datasource.password=Naonao7010
 spring.datasource.sql-script-encoding=UTF-8
 spring.sql.init.mode=always
