0804 herokuへのデプロイ

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #for MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/TaskDB?serverTimezone=Asia/Tokyo&&createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=Naonao7010
+spring.datasource.url=jdbc:mysql://p4jgocxcd7c2yfjk:dkp8r1pf1ri9fvet@nba02whlntki5w2p.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/go9mjgyxcbwjtd8g
+spring.datasource.username=p4jgocxcd7c2yfjk
+spring.datasource.password=dkp8r1pf1ri9fvet
 spring.datasource.sql-script-encoding=UTF-8
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=create-drop
