--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #for MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://p4jgocxcd7c2yfjk:dkp8r1pf1ri9fvet@nba02whlntki5w2p.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/go9mjgyxcbwjtd8g
-spring.datasource.username=p4jgocxcd7c2yfjk
-spring.datasource.password=dkp8r1pf1ri9fvet
+spring.datasource.url=jdbc:mysql://qen4e8uo6olqmu2j:v1czzgsnmt4l3oh7@nwhazdrp7hdpd4a4.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/lt94lx0t31co0zih
+spring.datasource.username=qen4e8uo6olqmu2j
+spring.datasource.password=v1czzgsnmt4l3oh7
 spring.datasource.sql-script-encoding=UTF-8
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -10,4 +10,11 @@ spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.initialization-order=after-jpa
 spring.mvc.hiddenmethod.filter.enabled=true
+
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.maxActive=10
+spring.datasource.maxIdle=5
+spring.datasource.minIdle=2
+spring.datasource.initialSize=5
+spring.datasource.removeAbandoned=true
 
