--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #for MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://qen4e8uo6olqmu2j:v1czzgsnmt4l3oh7@nwhazdrp7hdpd4a4.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/lt94lx0t31co0zih
-spring.datasource.username=qen4e8uo6olqmu2j
-spring.datasource.password=v1czzgsnmt4l3oh7
+spring.datasource.url=jdbc:mysql://xzu7xtoeawlw81hs:j97la0hvxsfu6uol@rnr56s6e2uk326pj.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/xj4nqfagdqpmctbk
+spring.datasource.username=xzu7xtoeawlw81hs
+spring.datasource.password=j97la0hvxsfu6uol
 spring.datasource.sql-script-encoding=UTF-8
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -10,11 +10,10 @@ spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.initialization-order=after-jpa
 spring.mvc.hiddenmethod.filter.enabled=true
+spring.datasource.max-active=10
+spring.datasource.max-idle=5
+spring.datasource.min-idle=2
+spring.datasource.initial-size=5
+spring.datasource.remove-abandoned=true
 
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.maxActive=10
-spring.datasource.maxIdle=5
-spring.datasource.minIdle=2
-spring.datasource.initialSize=5
-spring.datasource.removeAbandoned=true
 
