--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #for MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://xzu7xtoeawlw81hs:j97la0hvxsfu6uol@rnr56s6e2uk326pj.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/xj4nqfagdqpmctbk
-spring.datasource.username=xzu7xtoeawlw81hs
-spring.datasource.password=j97la0hvxsfu6uol
+spring.datasource.url=jdbc:mysql://t2fcolmdo18l329a:lvt0jzq8oryp7sc1@enqhzd10cxh7hv2e.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/o4tq2n3lxbi54pvw
+spring.datasource.username=t2fcolmdo18l329a
+spring.datasource.password=lvt0jzq8oryp7sc1
 spring.datasource.sql-script-encoding=UTF-8
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=create-drop
