--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=t2fcolmdo18l329a
 spring.datasource.password=lvt0jzq8oryp7sc1
 spring.datasource.sql-script-encoding=UTF-8
 spring.sql.init.mode=always
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.initialization-order=after-jpa
